[gd_scene load_steps=26 format=2]

[ext_resource path="res://picture/text.png" type="Texture" id=1]
[ext_resource path="res://picture/bg3.png" type="Texture" id=2]
[ext_resource path="res://picture/bg1.png" type="Texture" id=3]
[ext_resource path="res://picture/bg2.png" type="Texture" id=4]
[ext_resource path="res://ParallaxBackground.gd" type="Script" id=5]
[ext_resource path="res://picture/Nf7Sunm.jpeg" type="Texture" id=6]
[ext_resource path="res://font/NIAGSOL.TTF" type="DynamicFontData" id=7]
[ext_resource path="res://ColorRect.gd" type="Script" id=8]
[ext_resource path="res://WenrexaAssetsUI_SciFI/PNG/SelectPanel01.png" type="Texture" id=9]
[ext_resource path="res://Bgart/Untitled219_20220712163904.png" type="Texture" id=10]
[ext_resource path="res://mainselect2.gd" type="Script" id=11]
[ext_resource path="res://main menu.gd" type="Script" id=12]
[ext_resource path="res://sound/One Cosmos ï½œ Royalty Free Sci-Fi Background Music (No Copyright).wav" type="AudioStream" id=13]
[ext_resource path="res://sound/hover.wav" type="AudioStream" id=14]
[ext_resource path="res://sound/cilck.wav" type="AudioStream" id=15]

[sub_resource type="ShaderMaterial" id=8]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;
render_mode unshaded;

uniform sampler2D displace : hint_albedo;
uniform float dispAmt: hint_range(0,0.1);
uniform float abberationAmtX: hint_range(0,0.1);
uniform float abberationAmtY: hint_range(0,0.1);
uniform float dispSize: hint_range(0.1, 2.0);
uniform float maxAlpha : hint_range(0.1,1.0);

void fragment()
{
	//displace effect
	vec4 disp = texture(displace, SCREEN_UV * dispSize);
	vec2 newUV = SCREEN_UV + disp.xy * dispAmt;
	//abberation
	COLOR.r = texture(SCREEN_TEXTURE, newUV - vec2(abberationAmtX,abberationAmtY)).r; 
	COLOR.g = texture(SCREEN_TEXTURE, newUV).g; 
	COLOR.b = texture(SCREEN_TEXTURE, newUV + vec2(abberationAmtX,abberationAmtY)).b;
	COLOR.a = texture(SCREEN_TEXTURE, newUV).a * maxAlpha;
	}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/dispAmt = 0.0
shader_param/abberationAmtX = 0.025
shader_param/abberationAmtY = 0.0
shader_param/dispSize = 2.0
shader_param/maxAlpha = 0.297
shader_param/displace = ExtResource( 6 )

[sub_resource type="Animation" id=4]
resource_name = "New Anim"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/maxAlpha")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.297, 0.757, 0.297 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:material:shader_param/abberationAmtY")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.015, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:material:shader_param/abberationAmtX")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.025, 0.024, 0.025 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:material:shader_param/dispAmt")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.009 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/maxAlpha")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.297 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:material:shader_param/abberationAmtY")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:material:shader_param/abberationAmtX")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.025 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:material:shader_param/dispAmt")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="DynamicFont" id=9]
size = 70
font_data = ExtResource( 7 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://font/NIAGSOL.TTF"

[sub_resource type="DynamicFont" id=11]
size = 40
extra_spacing_top = 1
font_data = SubResource( 10 )

[sub_resource type="DynamicFontData" id=14]
font_path = "res://font/NIAGSOL.TTF"

[sub_resource type="DynamicFont" id=15]
size = 40
font_data = SubResource( 14 )

[node name="main menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 12 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 5 )

[node name="layer1" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/layer1"]
material = SubResource( 8 )
position = Vector2( 529.934, 288.75 )
scale = Vector2( 0.640909, 0.676389 )
texture = ExtResource( 3 )

[node name="layer2" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/layer2"]
position = Vector2( 501, 284 )
scale = Vector2( 0.6, 0.624074 )
texture = ExtResource( 4 )

[node name="layer3" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/layer3"]
position = Vector2( 500, 297 )
scale = Vector2( 0.638813, 0.636204 )
texture = ExtResource( 2 )

[node name="layer4" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/layer4"]
position = Vector2( 501, 301 )
scale = Vector2( 0.615, 0.615 )
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/layer4"]
modulate = Color( 1, 1, 1, 0.737255 )
material = SubResource( 3 )
margin_right = 1054.0
margin_bottom = 600.0
script = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ParallaxBackground/layer4/ColorRect"]
"anims/New Anim" = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="mainselect2" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )

[node name="TextureRect2" type="TextureRect" parent="mainselect2"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )
expand = true

[node name="TextureRect" type="TextureRect" parent="mainselect2"]
modulate = Color( 0, 0.835294, 1, 0.698039 )
margin_left = 38.0
margin_top = 54.0
margin_right = 293.0
margin_bottom = 574.0
texture = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="mainselect2/TextureRect"]
anchor_right = 0.94
anchor_bottom = 1.0
margin_left = 69.0
margin_top = 12.0
margin_right = 324.0
margin_bottom = 532.0
custom_fonts/font = SubResource( 9 )
text = "Main
Select"

[node name="MarginContainer" type="MarginContainer" parent="mainselect2"]
margin_left = 69.0
margin_top = 250.0
margin_right = 256.0
margin_bottom = 469.0

[node name="VBoxContainer" type="VBoxContainer" parent="mainselect2/MarginContainer"]
margin_right = 187.0
margin_bottom = 219.0

[node name="start" type="ToolButton" parent="mainselect2/MarginContainer/VBoxContainer"]
margin_right = 187.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 11 )
text = "START"

[node name="select chapter" type="ToolButton" parent="mainselect2/MarginContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 187.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 15 )
text = "SELECT CHAPTER"

[node name="Link test" type="ToolButton" parent="mainselect2/MarginContainer/VBoxContainer"]
margin_top = 111.0
margin_right = 187.0
margin_bottom = 162.0
custom_fonts/font = SubResource( 15 )
text = "LINK TEST"

[node name="quit" type="ToolButton" parent="mainselect2/MarginContainer/VBoxContainer"]
margin_top = 166.0
margin_right = 187.0
margin_bottom = 217.0
custom_fonts/font = SubResource( 15 )
text = "QUIT"

[node name="background_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -15.0

[node name="hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = 6.118

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[connection signal="mouse_entered" from="mainselect2/MarginContainer/VBoxContainer/start" to="." method="_on_start_mouse_entered"]
[connection signal="pressed" from="mainselect2/MarginContainer/VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="mainselect2/MarginContainer/VBoxContainer/select chapter" to="." method="_on_select_chapter_mouse_entered"]
[connection signal="pressed" from="mainselect2/MarginContainer/VBoxContainer/select chapter" to="." method="_on_select_chapter_pressed"]
[connection signal="mouse_entered" from="mainselect2/MarginContainer/VBoxContainer/Link test" to="." method="_on_Link_test_mouse_entered"]
[connection signal="pressed" from="mainselect2/MarginContainer/VBoxContainer/Link test" to="." method="_on_Link_test_pressed"]
[connection signal="mouse_entered" from="mainselect2/MarginContainer/VBoxContainer/quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="mainselect2/MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
